# smpl-diffusion-lab

./: .gitignore  README.md  pyproject.toml
.agents/skills/research-coding-mentor/: SKILL.md
.agents/skills/research-coding-mentor/agents/: openai.yaml
.agents/skills/research-coding-mentor/references/: state-schema.md
.githooks/: pre-commit
docs/: learning-log.md  mentoring-state.md
scripts/: sample_toy.py  train_toy.py
src/smpl_diffusion_lab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/smpl_diffusion_lab/data/: toy.py
src/smpl_diffusion_lab/diffusion/: forward.py  schedule.py  torch_forward.py  torch_reverse.py  torch_sampling.py  torch_schedule.py
src/smpl_diffusion_lab/models/: noise_mlp.py
src/smpl_diffusion_lab/training/: loss.py
tests/: test_diffusion_forward.py  test_diffusion_schedule.py  test_import.py  test_noise_mlp.py  test_noise_prediction_loss.py  test_torch_diffusion_forward.py  test_torch_diffusion_schedule.py  test_torch_reverse.py  test_torch_sampling.py  test_toy_data.py
